# mandelbrot-wgpu

./: Cargo.toml  LICENSE  README.md  mandelbrot.wgsl
src/: main.rs
